complete desktop viewport

--- a/index.html
+++ b/index.html
@@ -79,29 +79,31 @@
           <img src="./images/my-pic.jpg" alt="Adrian's picture" />
         </div>
         <div class="about-me-subsection">
-          <h2>About Me</h2>
+          <h2 class="section-title">About Me</h2>
           <p class="typeIt-text">
             <span id="element"></span>
           </p>
           <p class="paragraph">
-            Carrying on the legacy of finding solutions for difficult problems
-            from my previous experience as a liaison between software
-            developers, corporate clients, and end-users of diverse backgrounds
-            and skill levels, it has been a passion and an entrenched habit for
-            me to seek challenges that help me grow and learn.
+            I am an internationally experienced professional with expertise in
+            front-end development. I possess over twelve years of experience in
+            Software Solutions Account Management (liaison between developers
+            and corporate clients) for multinational corporations. I have
+            achieved a master's degree in history and a diploma in Computer
+            Application. I am fluent in 7 languages, including English, French,
+            Hindi, Arabic, and Persian.
             <br />
-            As a developer, I'm first and foremost committed to developing
-            myself, both personally and professionally. That's why from the
-            moment I wrote my first "Hello World" I fell in love with software
-            development. The most exciting part of developing is that the
-            learning journey never ends. There's always room for improvement,
-            just like in real life!
+            <br />
+            The moment I wrote my first "Hello, World" I fell in love with
+            development. Software development isn't just a job for me but a
+            passion, a hobby, and a life-long pursuit. I am fully capable of
+            working in both self-starting and collaborative environments, and I
+            am capable of relocating within Canada, if required.
           </p>
         </div>
       </section>
       <!-- My projects section -->
       <section class="my-work-section" id="My-Work">
-        <h2>My Work</h2>
+        <h2 class="section-title">My Work</h2>
         <p>Discover my Amazing Dev Space</p>
         <div class="project-demo">
           <div class="furniture-store project">
@@ -267,10 +269,12 @@
                   class="website buttons"
                   >Web App</a
                 >
-                <a 
-                href="https://github.com/hyperstone6/Refund-Tracker" 
-                target="_blank"
-                class="GitHub buttons">GitHub Page</a>
+                <a
+                  href="https://github.com/hyperstone6/Refund-Tracker"
+                  target="_blank"
+                  class="GitHub buttons"
+                  >GitHub Page</a
+                >
               </div>
               <span class="project-underline"></span>
             </div>
@@ -281,63 +285,152 @@
       </section>
       <!-- Technologies I've worked with section -->
       <section class="technologies-section" id="tech">
-        <h2 class="tech-header">
-          My Skills
-        </h2>
+        <div class="tech-header">
+          <h2  class="section-title">My Skills</h2>
+          <span>(so far)</span>
+        </div>
         <div title="HTML" class="tech-icons-gallery">
           <div class="tech-icon">
-            <img src="./icons/tech-icons/html.png" alt="HTML logo">
+            <img src="./icons/tech-icons/html.png" alt="HTML logo" />
           </div>
           <div title="CSS" class="tech-icon">
-            <img src="./icons/tech-icons/css3.png" alt="CSS logo">
+            <img src="./icons/tech-icons/css3.png" alt="CSS logo" />
           </div>
           <div title="JavaScript" class="tech-icon">
-            <img src="./icons/tech-icons/javascript.png" alt="Javascript logo">
+            <img
+              src="./icons/tech-icons/javascript.png"
+              alt="Javascript logo"
+            />
           </div>
           <div title="React.js" class="tech-icon">
-            <img src="./icons/tech-icons/reactjs.png" alt="React logo">
+            <img src="./icons/tech-icons/reactjs.png" alt="React logo" />
           </div>
           <div title="Node.js" class="tech-icon">
-            <img src="./icons/tech-icons/nodejs.png" alt="Node logo">
+            <img src="./icons/tech-icons/nodejs.png" alt="Node logo" />
           </div>
           <div title="NPM" class="tech-icon">
-            <img src="./icons/tech-icons/npm.png" alt="npm logo">
+            <img src="./icons/tech-icons/npm.png" alt="npm logo" />
           </div>
           <div title="Express.js" class="tech-icon">
-            <img src="./icons/tech-icons/expressjs.png" alt="Express logo">
+            <img src="./icons/tech-icons/expressjs.png" alt="Express logo" />
           </div>
           <div title="REST APIs" class="tech-icon">
-            <img src="./icons/tech-icons/REST.png" alt="rest logo">
+            <img src="./icons/tech-icons/REST.png" alt="rest logo" />
           </div>
           <div title="Socket.io" class="tech-icon">
-            <img src="./icons/tech-icons/socket.io.png" alt="Socket.io logo">
+            <img src="./icons/tech-icons/socket.io.png" alt="Socket.io logo" />
           </div>
           <div title="Sassy CSS" class="tech-icon">
-            <img src="./icons/tech-icons/sass.png" alt="Sass logo">
+            <img src="./icons/tech-icons/sass.png" alt="Sass logo" />
           </div>
           <div title="Bootstrap" class="tech-icon">
-            <img src="./icons/tech-icons/Bootstrap.png" alt="Bootstrap logo">
+            <img src="./icons/tech-icons/Bootstrap.png" alt="Bootstrap logo" />
           </div>
           <div title="Bulma" class="tech-icon">
-            <img src="./icons/tech-icons/bulma.png" alt="Bulma logo">
+            <img src="./icons/tech-icons/bulma.png" alt="Bulma logo" />
           </div>
           <div title="VS Code" class="tech-icon">
-            <img src="./icons/tech-icons/vs-code.png" alt="vs code logo">
+            <img src="./icons/tech-icons/vs-code.png" alt="vs code logo" />
           </div>
           <div title="Git" class="tech-icon">
-            <img src="./icons/tech-icons/git.png" alt="git logo">
+            <img src="./icons/tech-icons/git.png" alt="git logo" />
           </div>
           <div title="GitHub" class="tech-icon">
-            <img src="./icons/tech-icons/github.png" alt="Github logo">
+            <img src="./icons/tech-icons/github.png" alt="Github logo" />
           </div>
           <div title="Figma" class="tech-icon">
-            <img src="./icons/tech-icons/figma.png" alt="Figma logo">
+            <img src="./icons/tech-icons/figma.png" alt="Figma logo" />
           </div>
         </div>
       </section>
       <!-- Contact me section -->
       <section class="contact-me-section" id="Contact">
-
+        <div class="contact-final-word">
+          <div class="contact-image-container">
+            <img src="./images/enhanced-final-crop.png" alt="Adrian's image" />
+          </div>
+          <h2  class="section-title">Let's talk!</h2>
+          <ul class="contact-info-list">
+            <li>
+              <img src="./icons/contact-icons/location.svg" alt="location icon">
+              <p>Toronto, Ontario</p>
+            </li>
+            <li>
+              <img src="./icons/contact-icons/phone.svg" alt="phone icon">
+              <a href="tel:+14383645017">+1 (438) 364 5017</a>
+            </li>
+            <li>
+              <img src="./icons/contact-icons/email.svg" alt="email icon">
+              <a href="mailto:steeleadrian22@gmail.com">steeleadrian22@gmail.com</a>
+            </li>
+            <li>
+              <img src="./icons/contact-icons/linkedin.svg" alt="linkedin icon">
+              <a href="https://www.linkedin.com/in/adrian-steele">in/adrian-steele</a>
+            </li>
+            <li>
+              <img src="./icons/contact-icons/github.svg" alt="github icon">
+              <a href="https://github.com/hyperstone6">github.com/hyperstone6</a>
+            </li>
+            <li>
+              <img src="./icons/contact-icons/internet.svg" alt="website icon">
+              <a href="/">.com</a>
+            </li>
+          </ul>
+        </div>
+        <div class="form-container">
+          <form
+            class="contact-form"
+            action="https://formsubmit.co/f96e10ec36687aa31ba7d505d7a67305"
+            method="POST"
+          >
+            <label class="contact-labels" for="name">Your name *</label>
+            <input
+              class="contact-inputs"
+              type="text"
+              name="name"
+              id="name"
+              minlength="3"
+              maxlength="28"
+              required
+              title="Required"
+              placeholder="Ex. Bill Gates"
+            />
+            <label class="contact-labels" for="email">Your email *</label>
+            <input
+              class="contact-inputs"
+              type="email"
+              name="email"
+              id="email"
+              required
+              title="Required"
+              placeholder="billgates@microsoft.com"
+            />
+            <label class="contact-labels" for="subject">Email subject *</label>
+            <input
+              class="contact-inputs"
+              type="text"
+              class=""
+              name="subject"
+              id="subject"
+              minlength="3"
+              maxlength="28"
+              required
+              title="Required"
+              placeholder="Job Opening!"
+            />
+            <label class="contact-labels" for="text">Your message *</label>
+            <textarea
+              name="text"
+              id="text"
+              cols="30"
+              rows="10"
+              class="contact-text"
+              required
+              placeholder="We think you're awesome. Come work with us!"
+            ></textarea>
+            <button class="contact-btn buttons" type="submit">Submit</button>
+          </form>
+        </div>
       </section>
       <!-- footer section -->
       <footer class="footer-section">
