--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             </li>
             <li>
               <img src="./icons/contact-icons/internet.svg" alt="website icon">
-              <a href="/">.com</a>
+              <a href="/">adriansteele-portfolio.com</a>
             </li>
           </ul>
         </div>
