modify favicon and site title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quick Website</title>
+    <title>Adrian Steele</title>
     <script
       defer
       src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"
