add calculator app links

--- a/index.html
+++ b/index.html
@@ -212,8 +212,18 @@
                 interface.
               </p>
               <div class="item-btns">
-                <a href="/" class="website buttons">Web App</a>
-                <a href="/" class="GitHub buttons">GitHub Page</a>
+                <a
+                  target="_blank"
+                  href="https://my-calculator-hyperstone6.vercel.app/"
+                  class="website buttons"
+                  >Web App</a
+                >
+                <a
+                  target="_blank"
+                  href="https://github.com/hyperstone6/my-calculator-app"
+                  class="GitHub buttons"
+                  >GitHub Page</a
+                >
               </div>
               <span class="project-underline"></span>
             </div>
@@ -375,7 +385,7 @@
             </li>
             <li>
               <img src="./icons/contact-icons/email.svg" alt="email icon" />
-              <a href="mailto:steeleadrian22@gmail.com"
+              <a target="_blank" href="mailto:steeleadrian22@gmail.com"
                 >steeleadrian22@gmail.com</a
               >
             </li>
@@ -384,13 +394,13 @@
                 src="./icons/contact-icons/linkedin.svg"
                 alt="linkedin icon"
               />
-              <a href="https://www.linkedin.com/in/adrian-steele"
+              <a target="_blank" href="https://www.linkedin.com/in/adrian-steele"
                 >in/adrian-steele</a
               >
             </li>
             <li>
               <img src="./icons/contact-icons/github.svg" alt="github icon" />
-              <a href="https://github.com/hyperstone6">/hyperstone6</a>
+              <a target="_blank" href="https://github.com/hyperstone6">/hyperstone6</a>
             </li>
             <li>
               <img
