add new skills in my skills section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <header class="header">
         <div class="hero main-padding-1">
           <p class="hero-header-primary">Hi, I'm Adrian Steele</p>
-          <p class="hero-header-secondary">Front End Developer</p>
+          <p class="hero-header-secondary">Software Engineer</p>
           <a class="hero-btn buttons" href="#My-Work">Explore my work</a>
         </div>
       </header>
@@ -110,7 +110,7 @@
           </p>
           <p class="paragraph">
             I am an internationally experienced professional with expertise in
-            front-end development. I possess over twelve years of experience in
+            fullstack development. I possess over twelve years of experience in
             Software Solutions Account Management (liaison between developers
             and corporate clients) for multinational corporations. I have
             achieved a master's degree in history and a diploma in Computer
@@ -322,7 +322,6 @@
       <section class="technologies-section" id="tech">
         <div class="tech-header">
           <h2 class="section-title">My Skills</h2>
-          <span>(so far)</span>
         </div>
         <div title="HTML" class="tech-icons-gallery">
           <div class="tech-icon">
@@ -337,14 +336,23 @@
               alt="Javascript logo"
             />
           </div>
+          <div title="TypeScript" class="tech-icon">
+            <img src="./icons/tech-icons/typescript.png" alt="TypeScript logo" />
+          </div>
           <div title="React.js" class="tech-icon">
             <img src="./icons/tech-icons/reactjs.png" alt="React logo" />
           </div>
           <div title="Node.js" class="tech-icon">
             <img src="./icons/tech-icons/nodejs.png" alt="Node logo" />
           </div>
+          <div title="Python" class="tech-icon">
+            <img src="./icons/tech-icons/python.png" alt="Python logo" />
+          </div>
           <div title="NPM" class="tech-icon">
             <img src="./icons/tech-icons/npm.png" alt="npm logo" />
+          </div>
+          <div title="MongoDB" class="tech-icon">
+            <img src="./icons/tech-icons/mongodb.png" alt="MongoDB logo" />
           </div>
           <div title="Express.js" class="tech-icon">
             <img src="./icons/tech-icons/expressjs.png" alt="Express logo" />
