--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li class="nav-resume">
                   <a
                     target="_blank"
-                    href="https://drive.google.com/file/d/1siDXoz-_MJPF94PyPeQWfauEPyYoHXoY/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1YhY4ENRtSFl-fDTShFFIC5ysC2GUXz11/view?usp=sharing"
                     title="External Link (PDF)"
                   >
                     R&#233;sum&#233;
@@ -114,8 +114,7 @@
             Software Solutions Account Management (liaison between developers
             and corporate clients) for multinational corporations. I have
             achieved a master's degree in history and a diploma in Computer
-            Application. I am fluent in 7 languages, including English, French,
-            Hindi, Arabic, and Persian.
+            Application. I am fluent in 7 languages, including English and French.
             <br />
             <br />
             The moment I wrote my first "Hello, World" I fell in love with
