--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
       <!-- footer section -->
       <footer class="footer-section">
         <div class="copyright">
-          <p>&copy;2022 Adrian Steele</p>
+          <p>&copy;2023 designed & developed by Adrian Steele</p>
         </div>
       </footer>
     </div>
