add new technologies

--- a/index.html
+++ b/index.html
@@ -344,6 +344,12 @@
           <div title="Node.js" class="tech-icon">
             <img src="./icons/tech-icons/nodejs.png" alt="Node logo" />
           </div>
+          <div title="MySQL" class="tech-icon">
+            <img src="./icons/tech-icons/mysql.png" alt="MySQL logo" />
+          </div>
+          <div title="Sequelize" class="tech-icon">
+            <img src="./icons/tech-icons/sequelize.png" alt="Sequelize logo" />
+          </div>
           <div title="Python" class="tech-icon">
             <img src="./icons/tech-icons/python.png" alt="Python logo" />
           </div>
