--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <header class="header">
         <div class="hero main-padding-1">
           <p class="hero-header-primary">Hi, I'm Adrian Steele</p>
-          <p class="hero-header-secondary">Software Engineer</p>
+          <p class="hero-header-secondary">Software Developer</p>
           <a class="hero-btn buttons" href="#My-Work">Explore my work</a>
         </div>
       </header>
