add google analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-M1LF0CQCSR"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-M1LF0CQCSR");
+    </script>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -114,7 +129,8 @@
             Software Solutions Account Management (liaison between developers
             and corporate clients) for multinational corporations. I have
             achieved a master's degree in history and a diploma in Computer
-            Application. I am fluent in 7 languages, including English and French.
+            Application. I am fluent in 7 languages, including English and
+            French.
             <br />
             <br />
             The moment I wrote my first "Hello, World" I fell in love with
@@ -336,7 +352,10 @@
             />
           </div>
           <div title="TypeScript" class="tech-icon">
-            <img src="./icons/tech-icons/Typescript.png" alt="TypeScript logo" />
+            <img
+              src="./icons/tech-icons/Typescript.png"
+              alt="TypeScript logo"
+            />
           </div>
           <div title="React.js" class="tech-icon">
             <img src="./icons/tech-icons/reactjs.png" alt="React logo" />
