add google analytics

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       name="description"
       content="This is the web developer Adrian Steele's portfolio website. You can find Adrian's projects and resume in this website."
     />
+    <link rel="canonical" href="https://adrian-portfolio-phi.vercel.app">
     <title>Adrian Steele</title>
     <script
       defer
